--- a/style.css
+++ b/style.css
@@ -77,22 +77,9 @@ h5 {
   border-radius: 3vw;
 }
 
-.videos::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-image: url(assets/videosback.jpg);
-  z-index: -1;
-  opacity: 1;
-  background-size: 150%;
-  border-radius: 3vw;
-}
-
 .videos {
-  position: relative;
+  background-image: url(assets/videosback.jpg);
+  background-size: 150%;
   width: auto;
   height: auto;
   margin: 3% 3%;
@@ -107,6 +94,7 @@ h5 {
 
 .social {
   background-image: url(assets/socialback.jpg);
+  background-size: cover;
   margin: 0% 3%;
   width: 50vw;
   height: 35vw;
@@ -119,10 +107,10 @@ h5 {
 
 .connect {
   background-image: url(assets/socialback.jpg);
+  background-size: cover;
   margin: 0% 3%;
   width: 50vw;
   height: 35vw;
-  height: auto;
   padding: 3% 3%;
   border-radius: 3vw;
 }
@@ -177,9 +165,9 @@ h5 {
   color: black;
 }
 
-.navbar {
+.desknav {
   height: auto;
-  border-radius: 100vh;
+  border-radius: 5vw;
   margin: 1.5% 1.5%;
 }
 
@@ -319,7 +307,7 @@ h3 {
   border: none;
 }
 
-.material-symbols-outlined {
+.heart {
   padding-top: 1vw;
   padding-left: 1vw;
   padding-right: 1vw;
@@ -345,15 +333,55 @@ h3 {
   display: flex;
   justify-content: space-around;
   margin-top: 1vw;
-}
-
-.siteicon {
-  width: 11vw;
-  height: 11vw;
+  margin: 2.7vw 2.7vw;
 }
 
 .fb {
-  color: #4267B2;
+  transition: transform 500ms ease-in-out;
+}
+
+.fb:hover {
+  transform: rotate(360deg);
+}
+
+.yt {
+  transition: transform 500ms ease-in-out;
+}
+
+.yt:hover {
+  transform: scale(0.9);
+}
+
+.inst {
+  transition: transform 500ms ease-in-out;
+}
+
+.inst:hover {
+  transform: skewY(-9deg);
+}
+
+.twt {
+  transition: transform 500ms ease-out;
+}
+
+.twt:hover {
+  transform: rotateY(180deg);
+}
+
+.toast-container {
+  transform: rotate(-90deg);
+}
+
+.footnav {
+  margin-bottom: 0%;
+  margin-left: 1.5%;
+  margin-right: 1.5%;
+  margin-top: 3%;
+  border-top-left-radius: 5vw;
+  border-top-right-radius: 5vw;
+  border-bottom-left-radius: 0vw;
+  border-bottom-right-radius: 0vw;
+  height: auto;
 }
 
 @keyframes animefade {
@@ -414,11 +442,6 @@ h3 {
 
   .header {
     margin: 1.5% 1.5%;
-  }
-
-  .navbar {
-    height: auto;
-    border-radius: 100vh;
   }
 
   .navlogo {
